--- a/docker/ansible/Dockerfile
+++ b/docker/ansible/Dockerfile
@@ -1,8 +1,9 @@
 FROM ubuntu:xenial
 MAINTAINER Peter Eriksson petereriksson.net@gmail.com
 RUN apt-get update && apt-get -y upgrade
-RUN apt-get install ansible
-RUN mkdir /ansible 
-WORKDIR /ansible
+RUN apt-get install -y ansible ruby-serverspec
+WORKDIR /
 RUN echo "localhost ansible_connection=local" > /etc/localhost.inv
-CMD ['ansible-playbook', '-i', '/etc/localhost.inv', '/ansible/playbook.yml' ]
+COPY serverspec/ /opt/
+COPY entrypoint.sh /root/
+CMD [ "/root/entrypoint.sh" ]
