--- a/k8s/nginx-svc-loadbalancer.yaml
+++ b/k8s/nginx-svc-loadbalancer.yaml
@@ -49,7 +49,7 @@ metadata:
   labels:
     app: nginx
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-type: "elb"
   #   networking.gke.io/load-balancer-type: "External"
 spec:
   selector:
